--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-  <meta http-equiv="refresh" content="0;url=/transitflow-website/transitflow/pages/home/index.html">
+  <meta http-equiv="refresh"
+    content="0;url=https://hell-llex.github.io/transitflow-website/transitflow/pages/home/index.html">
 </head>
 
 <body>
