feat: add page project-item

--- a/transitflow/pages/project-item/index-1.html
+++ b/transitflow/pages/project-item/index-1.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="../../assets/icons/favicon.ico" type="image/x-icon">
-    <title>Project</title>
+    <title>Project Item</title>
 </head>
 
 <body class="body">
@@ -24,7 +24,7 @@
                         <li class="nav__item"><a href="../home/index.html">Home</a></li>
                         <li class="nav__item"><a href="../about/index.html">About</a></li>
                         <li class="nav__item"><a href="../services/index.html">Services</a></li>
-                        <li class="nav__item active"><a href="../project/index.html">Project</a></li>
+                        <li class="nav__item"><a href="../project/index.html">Project</a></li>
                         <li class="nav__item"><a href="#contact">Contact</a></li>
                         <li class="nav__item"><a href="../pricing/index.html">Pricing</a></li>
                     </ul>
@@ -37,74 +37,96 @@
                     <div class="welcome__background"></div>
                     <div class="welcome__content">
                         <div class="welcome__title-container">
-                            <span class="welcome__abstract">Gallery</span>
-                            <h2 class="welcome__title">Our Project</h2>
+                            <span class="welcome__abstract">Warehouse Transportation</span>
+                            <h2 class="welcome__title">Air Cargo Transportation</h2>
                         </div>
                     </div>
                 </div>
 
+                <div class="project-details">
+                    <div class="project-details__content">
+                        <div class="project-details__column-left">
+                            <div class="project-details__image image-item-1"></div>
+                        </div>
+                        <div class="project-details__column-right">
+                            <div class="project-details__title-container">
+                                <span class="project-details__abstract">Details</span>
+                                <h2 class="project-details__title">Project Details</h2>
+                            </div>
+                            <p class="project-details__text"><span>Customer: </span>David Warner</p>
+                            <p class="project-details__text"><span>Category: </span>Warehouse Transportaion</p>
+                            <p class="project-details__text"><span>Date: </span>12 December, 2022</p>
+                            <p class="project-details__text"><span>Status: </span>Completed</p>
+                            <p class="project-details__text"><span>Tags: </span>Life Style Travel , Best Delivery</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-details-info">
+                    <div class="project-details-info__content">
+                        <div class="project-details__column">
+                            <h2 class="project-details__title">Wharehouse Transportation</h2>
+                            <p class="project-details__text">Duis semper lacus scelerisque, aliquam leo quis, porttitor
+                                leo.
+                                Etiam lobortis dapibus libero vel porttitor. Nulla tempor elit nec feugiat
+                                tempus.Phasellus
+                                at quam id elit hendrerit semper feugiat id nunc. Morbi quis justo velit. Duis semper
+                                lacus
+                                scelerisque, aliquam leo quis, porttitor leo. Fusce lectus ex, pretium efficitur
+                                suscipit
+                                sed, faucibus vel elit Integer adipiscing erat eget risus sollicitudin pellentesque non
+                                erat. Maecenas nibh dolor malesuada sagittis accumsan ipsum. Pellentesque ultrices
+                                ultrices
+                                sapien, nec tincidunt nunc posuere.</p>
+                            <p class="project-details__text"><span>&#10140;</span>National Customer Service Center – 24
+                                hours a day.</p>
+                            <p class="project-details__text"><span>&#10140;</span>Online shipping navigator lets you
+                                quote, book, and track shipments</p>
+                            <p class="project-details__text"><span>&#10140;</span>Your Logistics Needs Are At The Heart
+                                Of Our
+                                Business</p>
+                            <p class="project-details__text"><span>&#10140;</span>Very careful handling of valuable
+                                goods
+                            </p>
+                            <p class="project-details__text"><span>&#10140;</span>Time saving and convenient
+                                transportation
+                                services in your area</p>
+                        </div>
+                        <div class="project-details__column">
+                            <h2 class="project-details__title">Our Project Transportation</h2>
+                            <p class="project-details__text">Duis semper lacus scelerisque, aliquam leo quis, porttitor
+                                leo. Etiam lobortis dapibus libero vel porttitor. Nulla tempor elit nec feugiat
+                                tempus.Phasellus at quam id elit hendrerit semper feugiat id nunc. Morbi quis justo
+                                velit. Duis semper lacus scelerisque, aliquam leo quis, porttitor leo. Fusce lectus ex,
+                                pretium efficitur suscipit sed, faucibus vel elit Integer adipiscing erat eget risus
+                                sollicitudin pellentesque non erat. Maecenas nibh dolor malesuada sagittis accumsan
+                                ipsum. Pellentesque ultrices ultrices sapien, nec tincidunt nunc posuere.</p>
+                            <div class="project-details__image-project-1"></div>
+                        </div>
+                    </div>
+                </div>
                 <div class="gallery">
                     <div class="gallery__content">
+                        <h2 class="project-details__title">Related Project</h2>
                         <div class="gallery__items">
-                            <a class="gallery__item" href="../project-item/index-1.html">
-                                <div class="gallery__item-background"></div>
-                                <div class="gallery__item-touch-panel">
-                                    <div class="gallery__item-icon"></div>
-                                </div>
-                            </a>
                             <a class="gallery__item" href="../project-item/index-2.html">
-                                <div class="gallery__item-background"></div>
+                                <div class="gallery__item-background image-item-2"></div>
                                 <div class="gallery__item-touch-panel">
                                     <div class="gallery__item-icon"></div>
                                 </div>
                             </a>
                             <a class="gallery__item" href="../project-item/index-3.html">
-                                <div class="gallery__item-background"></div>
+                                <div class="gallery__item-background image-item-3"></div>
                                 <div class="gallery__item-touch-panel">
                                     <div class="gallery__item-icon"></div>
                                 </div>
                             </a>
                             <a class="gallery__item" href="../project-item/index-4.html">
-                                <div class="gallery__item-background"></div>
+                                <div class="gallery__item-background  image-item-4"></div>
                                 <div class="gallery__item-touch-panel">
                                     <div class="gallery__item-icon"></div>
                                 </div>
                             </a>
-                            <a class="gallery__item" href="../project-item/index-5.html">
-                                <div class="gallery__item-background"></div>
-                                <div class="gallery__item-touch-panel">
-                                    <div class="gallery__item-icon"></div>
-                                </div>
-                            </a>
-                            <a class="gallery__item" href="../project-item/index-6.html">
-                                <div class="gallery__item-background"></div>
-                                <div class="gallery__item-touch-panel">
-                                    <div class="gallery__item-icon"></div>
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="us__items-statistic">
-                            <div class="us__item-statistic">
-                                <p class="us__item-statistic-count">24</p>
-                                <div class="us__item-statistic-icon"></div>
-                                <p class="us__item-statictic-text">Our Location</p>
-                            </div>
-                            <div class="us__item-statistic">
-                                <p class="us__item-statistic-count">1294</p>
-                                <div class="us__item-statistic-icon"></div>
-                                <p class="us__item-statictic-text">Delivered Packages</p>
-                            </div>
-                            <div class="us__item-statistic">
-                                <p class="us__item-statistic-count">3594</p>
-                                <div class="us__item-statistic-icon"></div>
-                                <p class="us__item-statictic-text">Satisfied Clients</p>
-                            </div>
-                            <div class="us__item-statistic">
-                                <p class="us__item-statistic-count">247+</p>
-                                <div class="us__item-statistic-icon"></div>
-                                <p class="us__item-statictic-text">Owned Vehicles</p>
-                            </div>
                         </div>
 
                     </div>
